aws-dev/cf-vpc-dev.json
{
	"AWSTemplateFormatVersion": "2010-09-09",
	"Description": "widgets.com VPC template",
	"Parameters": {
		"Region": {
			"Description": "The AWS region being used",
			"Type": "String",
			"Default": "eu-west-2"
		},
		"EnvironmentName": {
			"Description": "An environment name that will be prefixed to resource names",
			"Type": "String",
			"Default": "test"
		},
		"VpcCIDR": {
			"Description": "Please enter the IP range (CIDR notation) for this VPC",
			"Type": "String",
			"Default": "10.1.0.0/16"
		},
		"PublicSubnet1CIDR": {
			"Description": "Please enter the IP range (CIDR notation) for the public subnet in the first Availability Zone",
			"Type": "String",
			"Default": "10.1.0.0/20"
		},
		"PublicSubnet2CIDR": {
			"Description": "Please enter the IP range (CIDR notation) for the public subnet in the second Availability Zone",
			"Type": "String",
			"Default": "10.1.16.0/20"
		},
		"PublicSubnet3CIDR": {
			"Description": "Please enter the IP range (CIDR notation) for the public subnet in the third Availability Zone",
			"Type": "String",
			"Default": "10.1.32.0/20"
		},
		"PrivateSubnet1CIDR": {
			"Description": "Please enter the IP range (CIDR notation) for the private subnet in the first Availability Zone",
			"Type": "String",
			"Default": "10.1.64.0/18"
		},
		"PrivateSubnet2CIDR": {
			"Description": "Please enter the IP range (CIDR notation) for the private subnet in the second Availability Zone",
			"Type": "String",
			"Default": "10.1.128.0/18"
		},
		"PrivateSubnet3CIDR": {
			"Description": "Please enter the IP range (CIDR notation) for the private subnet in the third Availability Zone",
			"Type": "String",
			"Default": "10.1.192.0/18"
		}
	},
	"Resources": {
		"VPC": {
			"Type": "AWS::EC2::VPC",
			"Properties": {
				"CidrBlock": {
					"Ref": "VpcCIDR"
				},
				"EnableDnsSupport": true,
				"EnableDnsHostnames": true,
				"Tags": [{
					"Key": "Name",
					"Value": {
						"Fn::Sub": ["${environment}-VPC", {
							"environment": {
								"Ref": "EnvironmentName"
							}
						}]
					}
				}]
			}
		},
		"InternetGateway": {
			"Type": "AWS::EC2::InternetGateway",
			"Properties": {
				"Tags": [{
					"Key": "Name",
					"Value": {
						"Fn::Sub": ["${environment}-IGW", {
							"environment": {
								"Ref": "EnvironmentName"
							}
						}]
					}
				}]
			}
		},
		"InternetGatewayAttachment": {
			"Type": "AWS::EC2::VPCGatewayAttachment",
			"Properties": {
				"InternetGatewayId": {
					"Ref": "InternetGateway"
				},
				"VpcId": {
					"Ref": "VPC"
				}
			}
		},


		"PublicSubnet1": {
			"Type": "AWS::EC2::Subnet",
			"Properties": {
				"VpcId": {
					"Ref": "VPC"
				},
				"AvailabilityZone": {
					"Fn::Select": ["0", {
						"Fn::GetAZs": {
							"Ref": "Region"
						}
					}]
				},
				"CidrBlock": {
					"Ref": "PublicSubnet1CIDR"
				},
				"MapPublicIpOnLaunch": true,
				"Tags": [{
					"Key": "Name",
					"Value": {
						"Fn::Sub": ["${environment}-Public1", {
							"environment": {
								"Ref": "EnvironmentName"
							}
						}]
					}
				}]
			}
		},
		"PublicSubnet2": {
			"Type": "AWS::EC2::Subnet",
			"Properties": {
				"VpcId": {
					"Ref": "VPC"
				},
				"AvailabilityZone": {
					"Fn::Select": ["1", {
						"Fn::GetAZs": {
							"Ref": "Region"
						}
					}]
				},
				"CidrBlock": {
					"Ref": "PublicSubnet2CIDR"
				},
				"MapPublicIpOnLaunch": true,
				"Tags": [{
					"Key": "Name",
					"Value": {
						"Fn::Sub": ["${environment}-Public2", {
							"environment": {
								"Ref": "EnvironmentName"
							}
						}]
					}
				}]
			}
		},
		"PublicSubnet3": {
			"Type": "AWS::EC2::Subnet",
			"Properties": {
				"VpcId": {
					"Ref": "VPC"
				},
				"AvailabilityZone": {
					"Fn::Select": ["2", {
						"Fn::GetAZs": {
							"Ref": "Region"
						}
					}]
				},
				"CidrBlock": {
					"Ref": "PublicSubnet3CIDR"
				},
				"MapPublicIpOnLaunch": true,
				"Tags": [{
					"Key": "Name",
					"Value": {
						"Fn::Sub": ["${environment}-Public3", {
							"environment": {
								"Ref": "EnvironmentName"
							}
						}]
					}
				}]
			}
		},
		"PrivateSubnet1": {
			"Type": "AWS::EC2::Subnet",
			"Properties": {
				"VpcId": {
					"Ref": "VPC"
				},
				"AvailabilityZone": {
					"Fn::Select": ["0", {
						"Fn::GetAZs": {
							"Ref": "Region"
						}
					}]
				},
				"CidrBlock": {
					"Ref": "PrivateSubnet1CIDR"
				},
				"MapPublicIpOnLaunch": false,
				"Tags": [{
					"Key": "Name",
					"Value": {
						"Fn::Sub": ["${environment}-Private1", {
							"environment": {
								"Ref": "EnvironmentName"
							}
						}]
					}
				}]
			}
		},
		"PrivateSubnet2": {
			"Type": "AWS::EC2::Subnet",
			"Properties": {
				"VpcId": {
					"Ref": "VPC"
				},
				"AvailabilityZone": {
					"Fn::Select": ["1", {
						"Fn::GetAZs": {
							"Ref": "Region"
						}
					}]
				},
				"CidrBlock": {
					"Ref": "PrivateSubnet2CIDR"
				},
				"MapPublicIpOnLaunch": false,
				"Tags": [{
					"Key": "Name",
					"Value": {
						"Fn::Sub": ["${environment}-Private2", {
							"environment": {
								"Ref": "EnvironmentName"
							}
						}]
					}
				}]
			}
		},
		"PrivateSubnet3": {
			"Type": "AWS::EC2::Subnet",
			"Properties": {
				"VpcId": {
					"Ref": "VPC"
				},
				"AvailabilityZone": {
					"Fn::Select": ["2", {
						"Fn::GetAZs": {
							"Ref": "Region"
						}
					}]
				},
				"CidrBlock": {
					"Ref": "PrivateSubnet3CIDR"
				},
				"MapPublicIpOnLaunch": false,
				"Tags": [{
					"Key": "Name",
					"Value": {
						"Fn::Sub": ["${environment}-Private3", {
							"environment": {
								"Ref": "EnvironmentName"
							}
						}]
					}
				}]
			}
		},
		"NatGateway1EIP": {
			"Type": "AWS::EC2::EIP",
			"DependsOn": "InternetGatewayAttachment",
			"Properties": {
				"Domain": "vpc"
			}
		},
		"NatGateway2EIP": {
			"Type": "AWS::EC2::EIP",
			"DependsOn": "InternetGatewayAttachment",
			"Properties": {
				"Domain": "vpc"
			}
		},
		"NatGateway1": {
			"Type": "AWS::EC2::NatGateway",
			"Properties": {
				"AllocationId": {
					"Fn::GetAtt": ["NatGateway1EIP", "AllocationId"]
				},
				"SubnetId": {
					"Ref": "PublicSubnet1"
				},
				"Tags": [{
					"Key": "Name",
					"Value": {
						"Fn::Sub": ["${environment}-NATGW1", {
							"environment": {
								"Ref": "EnvironmentName"
							}
						}]
					}
				}]

			}
		},

		"NatGateway2": {
			"Type": "AWS::EC2::NatGateway",
			"Properties": {
				"AllocationId": {
					"Fn::GetAtt": ["NatGateway2EIP", "AllocationId"]
				},
				"SubnetId": {
					"Ref": "PublicSubnet2"
				},
				"Tags": [{
					"Key": "Name",
					"Value": {
						"Fn::Sub": ["${environment}-NATGW2", {
							"environment": {
								"Ref": "EnvironmentName"
							}
						}]
					}
				}]

			}
		},
		"PublicRouteTable": {
			"Type": "AWS::EC2::RouteTable",
			"Properties": {
				"VpcId": {
					"Ref": "VPC"
				},
				"Tags": [{
					"Key": "Name",
					"Value": {
						"Fn::Sub": ["${environment}-PublicRoutes", {
							"environment": {
								"Ref": "EnvironmentName"
							}
						}]
					}
				}]
			}
		},
		"DefaultPublicRoute": {
			"Type": "AWS::EC2::Route",
			"DependsOn": "InternetGatewayAttachment",
			"Properties": {
				"RouteTableId": {
					"Ref": "PublicRouteTable"
				},
				"DestinationCidrBlock": "0.0.0.0/0",
				"GatewayId": {
					"Ref": "InternetGateway"
				}
			}
		},
		"PublicSubnet1RouteTableAssociation": {
			"Type": "AWS::EC2::SubnetRouteTableAssociation",
			"Properties": {
				"RouteTableId": {
					"Ref": "PublicRouteTable"
				},
				"SubnetId": {
					"Ref": "PublicSubnet1"
				}
			}
		},
		"PublicSubnet2RouteTableAssociation": {
			"Type": "AWS::EC2::SubnetRouteTableAssociation",
			"Properties": {
				"RouteTableId": {
					"Ref": "PublicRouteTable"
				},
				"SubnetId": {
					"Ref": "PublicSubnet2"
				}
			}
		},
		"PublicSubnet3RouteTableAssociation": {
			"Type": "AWS::EC2::SubnetRouteTableAssociation",
			"Properties": {
				"RouteTableId": {
					"Ref": "PublicRouteTable"
				},
				"SubnetId": {
					"Ref": "PublicSubnet3"
				}
			}
		},
		"PrivateRouteTable1": {
			"Type": "AWS::EC2::RouteTable",
			"Properties": {
				"VpcId": {
					"Ref": "VPC"
				},
				"Tags": [{
					"Key": "Name",
					"Value": {
						"Fn::Sub": ["${environment}-PrivateRoutes1", {
							"environment": {
								"Ref": "EnvironmentName"
							}
						}]
					}
				}]
			}
		},
		"DefaultPrivateRoute1": {
			"Type": "AWS::EC2::Route",
			"Properties": {
				"RouteTableId": {
					"Ref": "PrivateRouteTable1"
				},
				"DestinationCidrBlock": "0.0.0.0/0",
				"NatGatewayId": {
					"Ref": "NatGateway1"
				}
			}
		},

		"PrivateSubnet1RouteTableAssociation": {
			"Type": "AWS::EC2::SubnetRouteTableAssociation",
			"Properties": {
				"RouteTableId": {
					"Ref": "PrivateRouteTable1"
				},
				"SubnetId": {
					"Ref": "PrivateSubnet1"
				}
			}
		},
		"PrivateRouteTable2": {
			"Type": "AWS::EC2::RouteTable",
			"Properties": {
				"VpcId": {
					"Ref": "VPC"
				},
				"Tags": [{
					"Key": "Name",
					"Value": {
						"Fn::Sub": ["${environment}-PrivateRoutes2", {
							"environment": {
								"Ref": "EnvironmentName"
							}
						}]
					}
				}]
			}

		},
		"DefaultPrivateRoute2": {
			"Type": "AWS::EC2::Route",
			"Properties": {
				"RouteTableId": {
					"Ref": "PrivateRouteTable2"
				},
				"DestinationCidrBlock": "0.0.0.0/0",
				"NatGatewayId": {
					"Ref": "NatGateway2"
				}
			}
		},
		"PrivateSubnet2RouteTableAssociation": {
			"Type": "AWS::EC2::SubnetRouteTableAssociation",
			"Properties": {
				"RouteTableId": {
					"Ref": "PrivateRouteTable2"
				},
				"SubnetId": {
					"Ref": "PrivateSubnet2"
				}
			}
		},
		"PrivateSubnet3RouteTableAssociation": {
			"Type": "AWS::EC2::SubnetRouteTableAssociation",
			"Properties": {
				"RouteTableId": {
					"Ref": "PrivateRouteTable2"
				},
				"SubnetId": {
					"Ref": "PrivateSubnet3"
				}
			}
		},
		"NoIngressSecurityGroup": {
			"Type": "AWS::EC2::SecurityGroup",
			"Properties": {
				"GroupName": "no-ingress-sg",
				"GroupDescription": "Security group with no ingress rule",
				"VpcId": {
					"Ref": "VPC"
				},
				"Tags": [{
					"Key": "Name",
					"Value": {
						"Fn::Sub": ["${environment}-PrivateRoutes1", {
							"environment": {
								"Ref": "EnvironmentName"
							}
						}]
					}
				}]
			}
		}

	},
	"Outputs": {
		"VPC": {
			"Description": "A reference to the created VPC",
			"Value": {
				"Ref": "VPC"
			}
		},
		"PublicSubnets": {
			"Description": "A list of the public subnets",
			"Value": {
				"Fn::Join": [",", [{
					"Ref": "PublicSubnet1"
				}, {
					"Ref": "PublicSubnet2"
				}, {
					"Ref": "PublicSubnet3"
				}]]
			}
		},
		"PrivateSubnets": {
			"Description": "A list of the private subnets",
			"Value": {
				"Fn::Join": [",", [{
					"Ref": "PrivateSubnet1"
				}, {
					"Ref": "PrivateSubnet2"
				}, {
					"Ref": "PrivateSubnet3"
				}]]
			}
		},
		"PublicSubnet1": {
			"Description": "A reference to the public subnet in the 1st Availability Zone",
			"Value": {
				"Ref": "PublicSubnet1"
			}
		},
		"PublicSubnet2": {
			"Description": "A reference to the public subnet in the 2nd Availability Zone",
			"Value": {
				"Ref": "PublicSubnet2"
			}
		},
		"PublicSubnet3": {
			"Description": "A reference to the public subnet in the 3rd Availability Zone",
			"Value": {
				"Ref": "PublicSubnet3"
			}
		},
		"PrivateSubnet1": {
			"Description": "A reference to the private subnet in the 1st Availability Zone",
			"Value": {
				"Ref": "PrivateSubnet1"
			}
		},
		"PrivateSubnet2": {
			"Description": "A reference to the private subnet in the 2nd Availability Zone",
			"Value": {
				"Ref": "PrivateSubnet2"
			}
		},
		"PrivateSubnet3": {
			"Description": "A reference to the private subnet in the 3rd Availability Zone",
			"Value": {
				"Ref": "PrivateSubnet3"
			}
		},
		"NoIngressSecurityGroup": {
			"Description": "Security group with no ingress rule",
			"Value": {
				"Ref": "NoIngressSecurityGroup"
			}
		}
	}
}
